# academ-weather

./: .gitignore  .gitmodules  CMakeLists.txt  config.cfg  dependencies
android/: .gitignore  build.native
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/ru/lagner/android/academ_weather/: ApplicationTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/qtproject/qt5/android/bindings/: QtLoader.java
android/app/src/main/java/ru/lagner/android/: CppEventBus.java  CustomEvent.java  MainActivity.java  SplashScreenActivity.java
android/app/src/main/java/ru/lagner/android/academ_weather/: Application.java  CppEventBus.java  CustomEvent.java  LocalQtActivity.java  MainActivity.java  SplashScreenActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/test/java/ru/lagner/android/academ_weather/: ExampleUnitTest.java
bootstrap/: android.py  configuration.py  qt.py  utils.py
qml/: main.qml
src/: main.cpp
